# crispy-bootstrap5

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .python-version  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  test.html  tox.ini
.github/: FUNDING.yml
.github/workflows/: publish.yml  test.yml
crispy-bootstrap5/: .gitignore  LICENSE  README.md  setup.cfg  setup.py  test.html
crispy-bootstrap5/crispy_bootstrap5/: __init__.py
crispy-bootstrap5/crispy_bootstrap5/templates/bootstrap5/: field.html  whole_uni_formset.html
crispy-bootstrap5/crispy_bootstrap5/tenplatetags/: crispy_forms_field.py
crispy-bootstrap5/tests/: conftest.py  test_form_helper.py  test_layout.py  test_settings.py  test_tags.py  utils.py
crispy_bootstrap5/: __init__.py  bootstrap5.py
crispy_bootstrap5/templates/bootstrap5/: accordion-group.html  accordion.html  betterform.html  field.html  inputs.html  multifield.html  table_inline_formset.html  whole_uni_form.html
crispy_bootstrap5/templates/bootstrap5/layout/: alert.html  checkboxselectmultiple.html  checkboxselectmultiple_inline.html  field_errors.html  field_errors_block.html  field_file.html  fieldset.html  (+16 more)
tests/: conftest.py  forms.py  test_dynamic_api.py  test_form_helper.py  test_layout.py  test_layout_objects.py  test_settings.py  test_tags.py  utils.py
tests/results/: accordion.html  accordion_always_open.html  accordion_flush.html  alert.html  checkboxes.html  field_with_buttons.html  field_with_buttons_failing.html  field_with_buttons_failing_lt50.html  field_with_buttons_failing_lt52.html  field_with_buttons_lt50.html  field_with_buttons_select.html  flat_attrs.html  help_text_escape.html  help_text_escape_lt50.html  inline_checkboxes.html  inline_checkboxes_failing.html  inline_checkboxes_failing_lt50.html  inline_checkboxes_failing_lt52.html  inline_radios.html  inline_radios_failing.html  inline_radios_failing_lt50.html  inline_radios_failing_lt52.html  modal.html  radio.html  row.html  single_checkbox.html  test_bootstrap5_form_inline_lt50.html  test_clearable_file_field.html  test_clearable_file_field_failing.html  test_clearable_file_field_failing_lt50.html  test_clearable_file_field_failing_lt52.html  test_file_field.html  test_file_field_failing.html  test_file_field_failing_lt50.html  test_file_field_failing_lt52.html  test_floating_field.html  test_floating_field_failing.html  test_floating_field_failing_lt50.html  test_floating_field_failing_lt52.html  test_floating_field_field_label.html  (+27 more)
tests/templates/: custom_field_template.html  custom_form_template.html  custom_form_template_with_context.html
(+6 files in other folders)
